# clidesc-common

./: .buildinfo  .gitignore  LICENSE  README.md  clide.html  clidesc.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  utils.html
.doctrees/: clide.doctree  clidesc.doctree  index.doctree  utils.doctree
.github/workflows/: gh-pages.yml
_sources/: utils.rst.txt
_static/css/: my_theme.css
clidesc/: clide.py  clidesc.py  utils.py
clidesc_common.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: README.md
docs/source/: clide.rst  clidesc.rst  conf.py  index.rst
docs/temp/: clide.rst  modules.rst
